--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>resolve-magic</title>
+    <title>resolveAI</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="https://resolveai.netlify.app/path-to-image.jpg" />
   </head>
 
   <body>
