--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>resolveAI</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
-    <meta property="og:image" content="https://resolveai.netlify.app/path-to-image.jpg" />
+    <meta property="og:image" content="https://imgur.com/uH1b0kq" />
   </head>
 
   <body>
